--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -36,6 +38,6 @@
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
